--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 	<head>
 		<title>Dom Play</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+		<meta charset="UTF-8">
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
 
@@ -16,18 +16,18 @@
 
 		<section class="main-container">
 			<div class="center-container">
-				<h2 align="center">ALL YOU NEED IS KILL</h2>
+				<h2 style="text-align: center;">ALL YOU NEED IS KILL</h2>
 				<p>
 					screenplay by<br>
 					D W Harper<br><br>
-					based on the novel "All You Need is Kill"<br>
-					by Hiroshi Sakurazaka
+						based on the novel "All You Need is Kill"<br>
+						by Hiroshi Sakurazaka
 				</p>
 
 				<h3>INT. UNITED DEFENSE FORCES DROPSHIP - IN FLIGHT - STORM</h3>
 				<p class="stage-direction">SOUND: Someone breathing, GASPING for breath they're so<br>
 					afraid. And the HIGH-PITCHED WHINE of RAMJETS laboring<br>
-					against heavy side-winds as we struggle to focus on -</p>
+						against heavy side-winds as we struggle to focus on -</p>
 
 				<div class="actor0">
 					<p>CAGE (V.O.)</p>
@@ -38,16 +38,16 @@
 
 				<p class="stage-direction">
 					PVT. BILLY CAGE is maybe 20. Too young for this. COLD SWEAT<br>
-					trickles into his eyes. When he tries to wipe it away, his<br>
-					ARMORED FINGERS CLACK against clear ACRYLIC. His FACEPLATE.<br><br>
+						trickles into his eyes. When he tries to wipe it away, his<br>
+						ARMORED FINGERS CLACK against clear ACRYLIC. His FACEPLATE.<br><br>
 
-					Cage is wearing an EXOJACKET: powered, tight-fitting body<br>
-					armor, bristling with weaponry. TWO DOZEN OTHER young,<br>
-					terrified SOLDIERS hang with him, also jacketed, dangling<br>
-					over the OPEN BAY DOORS, over OCEAN.<br><br>
+						Cage is wearing an EXOJACKET: powered, tight-fitting body<br>
+						armor, bristling with weaponry. TWO DOZEN OTHER young,<br>
+						terrified SOLDIERS hang with him, also jacketed, dangling<br>
+						over the OPEN BAY DOORS, over OCEAN.<br><br>
 
-					Cage taps a button. His faceplate opens, NOISE floods in at a<br>
-					DEAFENING ROAR. He rubs his eyes -
+						Cage taps a button. His faceplate opens, NOISE floods in at a<br>
+						DEAFENING ROAR. He rubs his eyes -
 				</p>
 
 				<div class="actor1">
@@ -57,7 +57,7 @@
 
 				<p class="stage-direction">
 					PVT. YONABURU, a hard-ass fuckup with Asian features but a<br>
-					Southern drawl - Cage's battle-buddy - smiles.
+						Southern drawl - Cage's battle-buddy - smiles.
 				</p>
 
 				<div class="actor2">
@@ -67,8 +67,8 @@
 
 				<p class="stage-direction">
 					FROM UP FRONT, BATTLE-SCARRED SGT. FARELL shoots them a look.<br>
-					ACROSS from Cage, GRIFF, 25, a burly-looking bad-ass, keeps<br>
-					making an about-to-vomit face, barely fighting back the urge.
+						ACROSS from Cage, GRIFF, 25, a burly-looking bad-ass, keeps<br>
+						making an about-to-vomit face, barely fighting back the urge.
 				</p>
 
 				<div class="actor2">
@@ -109,8 +109,8 @@
 
 				<p class="stage-direction">
 					Yonaburu taps "MRS. SMITH", an antiquated SMITH & WESSON<br>
-					.357, against his faceplate and slips it in his exojacket's<br>
-					utility belt. Cage doesn't look too reassured.
+						.357, against his faceplate and slips it in his exojacket's<br>
+						utility belt. Cage doesn't look too reassured.
 				</p>
 
 				<div class="actor2">
